# Otakuverse

./: .gitignore  Anchor.toml  Completion.md  OtakuVerse-Context.md  README.md  otakuverse-keypair.json
backend/: README.md  db.js  package-lock.json  package.json  server.js
backend/middleware/: auth.js
backend/models/: User.js  Waitlist.js
backend/routes/: auth.js  clerkWebhook.js  waitlist.js
solana-program/: Anchor.toml  Cargo.toml  client.js  package-lock.json  package.json  tsconfig.json
solana-program/programs/otakuverse-program/: Cargo.toml
solana-program/programs/otakuverse-program/src/: lib.rs
solana-program/src/: error.rs  instruction.rs  lib.rs  processor.rs  simple_program.rs
solana-program/src/state/: community.rs  mod.rs  nft.rs
solana-program/tests/: otakuverse.ts
web/: README.md  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
web/src/: App.tsx  index.css  main.tsx
web/src/components/: AnimeCard.tsx  ComingSoonModal.tsx  CommunitiesShowcase.tsx  CommunityFlipCard.module.css  CommunityFlipCard.tsx  CreatorCard.tsx  ErrorBoundary.tsx  FeaturedAnime.tsx  FeaturesSection.tsx  Footer.tsx  HeroBackgroundSlider.tsx  HeroSection.tsx  LoadingSpinner.tsx  NFTActionButton.tsx  NFTShowcase.tsx  Navbar.tsx  WaitlistForm.tsx  WaitlistSection.tsx
web/src/components/auth/: ProtectedRoute.tsx
web/src/components/ui/: notifications.tsx
web/src/hooks/: useFormValidation.ts  useWallet.ts
web/src/pages/: AnimeLibrary.tsx  Auth.tsx  Badges.tsx  Communities.tsx  CommunityDiscord.tsx  CommunityPage.tsx  DAO.tsx  Dashboard.tsx  Events.tsx  Index.tsx  Marketplace.tsx  PaymentPage.tsx  Trading.tsx  WatchPage.tsx
web/src/types/: community.d.ts  program.ts  wallet.d.ts
web/src/utils/: accessibility.ts  anchorSetup.ts  otakuverse_anchor_program.json  performance.ts  programUtils.ts  walletUtils.ts
(+1 files in other folders)
