[package]
name = "otakuverse-anchor-program"
version = "0.1.0"
description = "OtakuVerse - A Solana-powered platform for anime NFTs and community features"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "otakuverse_program"
path = "src/simple_program.rs"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
solana-program = "=1.16.0"

[dev-dependencies]
solana-program-test = "=1.16.0"
solana-sdk = "=1.16.0"

[profile.release]
overflow-checks = true

