[package]
name = "otakuverse-anchor-program"
version = "0.1.0"
description = "OtakuVerse - A Solana-powered platform for anime NFTs and community features"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "otakuverse_program"
path = "src/lib.rs"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
borsh = "0.10.3"
spl-token = { version = "3.5.0", features = ["no-entrypoint"] }
mpl-token-metadata = { version = "1.13.2", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "1.1.2", features = ["no-entrypoint"] }
solana-program = "1.16.17"

# All spl-token-2022 and patch/override sections have been removed for stable SPL Token v3 only.

[profile.release]
overflow-checks = true
