[package]
name = "otakuverse-program"
version = "0.1.0"
description = "OtakuVerse Solana Program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "otakuverse_program"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"